Version 0.9-svn

* Implemented pidfile creation and checking. New config option
  'pidfile' controls the behaviour. Setting the option will make
  grossd to write the process pid into the file specified by the
  full path. An optional parameter 'check' can be set to keep
  grossd from starting if the pidfile already exists.

  pidfile = /full/path[;check]

  Another way to control this is by command line options -p and -P.
  Both of the options will enable pidfile creation, and -P will
  check the existence of the file.

Issues fixed:
#58: grossd should write a pid file after daemonizing (RFE)

Version 0.9.2

- documented configuration options query_timelimit and
  block_reason. See doc/examples/grossd.conf
- new option: pool_maxthreads, you may need to change this
  if you get more than 100 queries per second and/or have
  slow dns servers
- some log messages got sent with wrong priorities

#56: Grossd skips all the checks if block_threshold not set
#57: sjsms: query_timelimit is one second off

Version 0.9.1

Issues fixed:
#55: --disable-dnsbl broken on 0.9

Version 0.9

* changed the port defaults to be more compatible with
  the community, grossd now defaults to ports 5525 (grossd),
  5524 (sync), and 5522 (status queries)
* preliminary support for MILTER protocol, check config file
* support for definitive checks: it's now possible to write 
  checks that cause grossd to block or pass (whitelisting)
* dnsbl check is now run time configurable
* two new check types: RHSBL and DNSWL - check config file
  for documentation and examples. DNSWL is first definitive
  check. 

- improved thread counting in thread_pool.c
- code cleaning
- default for grey_mask was 0, effectively discarding client_ip
  information from greylisting triplet. Changed it to 24.
- checks for c-ares version: there's an API change between
  1.4.x and 1.5.0

Issues fixed:
#40: new type of check - RHSBL (RFE)
#41: new type of check - DNSWL (RFE)