@@ -589,7 +589,11 @@ main(int argc, char *argv[])
 	
 	if ((ctx->config.flags & (FLG_NODAEMON | FLG_SYSLOG)) == FLG_SYSLOG) {
 		openlog("grossd", LOG_ODELAY, ctx->config.syslogfacility);
+		ctx->syslog_open = true;
 	}
+
+	if ((ctx->config.flags & FLG_CREATE_STATEFILE) == FLG_CREATE_STATEFILE)
+		create_statefile();
 
 	if ((ctx->config.flags & FLG_CREATE_PIDFILE) == FLG_CREATE_PIDFILE) {
 		assert(ctx->config.pidfile);
